[package]
name = "network-device-manager"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24", features = ["default"] }
egui = "0.24"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
ipnetwork = "0.20"
once_cell = "1.19"
pnet = "0.34"
default-net = "0.10.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
